--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4846,6 +4846,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\R866958P\\Kumarathunge et al. - 2019 - Acclimation and adaptation components of the tempe.pdf}
 }
 
+@article{kunertRevisedHydrologicalModel2017,
+  title = {A Revised Hydrological Model for the {{Central Amazon}}: {{The}} Importance of Emergent Canopy Trees in the Forest Water Budget},
+  shorttitle = {A Revised Hydrological Model for the {{Central Amazon}}},
+  author = {Kunert, Norbert and Aparecido, Luiza Maria T. and Wolff, Stefan and Higuchi, Niro and dos Santos, Joaquim and de Araujo, Alessandro Carioca and Trumbore, Susan},
+  date = {2017-05-28},
+  journaltitle = {Agricultural and Forest Meteorology},
+  volume = {239},
+  pages = {47--57},
+  issn = {0168-1923},
+  doi = {10.1016/j.agrformet.2017.03.002},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168192317300825},
+  urldate = {2021-08-31},
+  abstract = {The Amazon forest is integral to the global climate system in part because of the high rate of rainfall recycling through tree transpiration and biodiversity (size and species composition). However, the partitioning of precipitation into evaporation, transpiration and runoff, has been quantified at only a few sites. At our study site in the central Amazon, annual rainfall in 2013 was 2302mm and latent heat flux measurements made using eddy covariance revealed that 1360mm (59\%) was returned to the atmosphere through evaporation and transpiration. Runoff accounted for 41\% of the net ecosystem water loss. Combining annual xylem sap flux estimates with total stand sap wood area, we estimated annual stand transpiration rate to be 851mm (36\% of annual rainfall). Emergent canopy trees (diameter {$>$}30cm; average height of 28m) were responsible for the majority (71\%) of the transpired water flux, recycling potentially 26\% of the rainfall back to the atmosphere. By difference, we estimate that 510mm of intercepted rainwater (22\% of rainfall) was evaporated directly back to atmosphere from the canopy. Highest stand transpiration rates occurred during the dryer months due to both increased water vapor pressure deficit and the onset of new leaf flush. This study provides further evidence for convergent water use characteristics of tropical trees and highlights the importance of large trees in tropical moist forests. Large trees have been demonstrated to be vulnerable to drought-related mortality, and thus potentially will make up a critical component of the response of tropical forests to climate change.},
+  langid = {english},
+  keywords = {Convergence,Evapotranspiration,Sap flux,Terra firme,Tree size classes,Tropics},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\RYTSJUI8\\Kunert et al. - 2017 - A revised hydrological model for the Central Amazo.pdf;C\:\\Users\\Me\\Zotero\\storage\\9KUSA3AM\\S0168192317300825.html}
+}
+
 @article{kusiPlasticLeafMorphology2020,
   title = {Plastic Leaf Morphology in Three Species of {{Quercus}}: {{The}} More Exposed Leaves Are Smaller, More Lobated and Denser},
   shorttitle = {Plastic Leaf Morphology in Three Species of {{Quercus}}},
@@ -6127,6 +6145,44 @@
   abstract = {The physiological mechanisms responsible for reduced extension growth as trees increase in height remain elusive. We evaluated biophysical constraints on leaf expansion in old-growth Douglas-fir (Pseudotsuga menziesii (Mirb.) Franco) trees. Needle elongation rates, plastic and elastic extensibility, bulk leaf water (ΨL ) and osmotic (Ψπ) potential, bulk tissue yield threshold and final needle length were characterized along a height gradient in crowns of {$>$} 50-m-tall trees during the period between bud break and full expansion (May to June). Although needle length decreased with increasing height, there was no height-related trend in leaf plastic extensibility, which was highest immediately after bud break (2.9\%) and declined rapidly to a stable minimum value (0.3\%) over a 3-week period during which leaf expansion was completed. There was a significant positive linear relationship between needle elongation rates and plastic extensibility. Yield thresholds were consistently lower at the upper and middle crown sampling heights. The mean yield threshold across all sampling heights was 0.12 ± 0.03 MPa on June 8, rising to 0.34 ± 0.03 MPa on June 15 and 0.45 ± 0.05 MPa on June 24. Bulk leaf Ψπ decreased linearly with increasing height at a rate of 0.004 MPa m –1 during the period of most rapid needle elongation, but the vertical osmotic gradient was not sufficient to fully compensate for the 0.015 MPa m –1 vertical gradient in ΨL, implying that bulk leaf turgor declined at a rate of about 0.011 MPa m –1 increase in height. Although height-dependent reductions in turgor appeared to constrain leaf expansion, it is possible that the impact of reduced turgor was mitigated by delayed phenological development with increasing height, which resulted in an increase with height in the temperature during leaf expansion.},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\EMYC3F25\\Meinzer et al. - 2008 - Biophysical constraints on leaf expansion in a tal.pdf}
+}
+
+@article{meinzerWaterTransportTrees2001,
+  title = {Water Transport in Trees: Current Perspectives, New Insights and Some Controversies},
+  shorttitle = {Water Transport in Trees},
+  author = {Meinzer, Frederick C. and Clearwater, Michael J. and Goldstein, Guillermo},
+  date = {2001-06-01},
+  journaltitle = {Environmental and Experimental Botany},
+  volume = {45},
+  number = {3},
+  pages = {239--262},
+  issn = {0098-8472},
+  doi = {10.1016/S0098-8472(01)00074-0},
+  url = {https://www.sciencedirect.com/science/article/pii/S0098847201000740},
+  urldate = {2021-08-31},
+  abstract = {This review emphasizes recent developments and controversies related to the uptake, transport and loss of water by trees. Comparisons of the stable isotope composition of soil and xylem water have provided new and sometimes unexpected insights concerning spatial and temporal partitioning of soil water by roots. Passive, hydraulic redistribution of water from moister to drier portions of the soil profile via plant root systems may have a substantial impact on vertical profiles of soil water distribution, partitioning of water within and among species, and on ecosystem water balance. The recent development of a technique for direct measurement of pressure in individual xylem elements of intact, transpiring plants elicited a number of challenges to the century-old cohesion–tension theory. The ongoing debate over mechanisms of long-distance water transport has stimulated an intense interest in the phenomenon and mechanisms of embolism repair. Rather than embolism being essentially irreversible, it now appears that there is a dynamic balance between embolism formation and repair throughout the day and that daily release of water from the xylem via cavitation may serve to stabilize leaf water balance by minimizing the temporal imbalance between water supply and demand. Leaf physiology is closely linked to hydraulic architecture and hydraulic perturbations, but the precise nature of the signals to which stomata respond remains to be elucidated. When water transport in trees is studied at multiple scales from single leaves to the whole organism, considerable functional convergence in regulation of water use among phylogenetically diverse species is revealed.},
+  langid = {english},
+  keywords = {Capacitance,Cohesion theory,Hydraulic architecture,Plant–water relations,Soil water partitioning,Xylem cavitation},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\7A328STT\\Meinzer et al. - 2001 - Water transport in trees current perspectives, ne.pdf}
+}
+
+@article{meinzerWaterTransportTrees2001a,
+  title = {Water Transport in Trees: Current Perspectives, New Insights and Some Controversies},
+  shorttitle = {Water Transport in Trees},
+  author = {Meinzer, Frederick C. and Clearwater, Michael J. and Goldstein, Guillermo},
+  date = {2001-06-01},
+  journaltitle = {Environmental and Experimental Botany},
+  volume = {45},
+  number = {3},
+  pages = {239--262},
+  issn = {0098-8472},
+  doi = {10.1016/S0098-8472(01)00074-0},
+  url = {https://www.sciencedirect.com/science/article/pii/S0098847201000740},
+  urldate = {2021-08-31},
+  abstract = {This review emphasizes recent developments and controversies related to the uptake, transport and loss of water by trees. Comparisons of the stable isotope composition of soil and xylem water have provided new and sometimes unexpected insights concerning spatial and temporal partitioning of soil water by roots. Passive, hydraulic redistribution of water from moister to drier portions of the soil profile via plant root systems may have a substantial impact on vertical profiles of soil water distribution, partitioning of water within and among species, and on ecosystem water balance. The recent development of a technique for direct measurement of pressure in individual xylem elements of intact, transpiring plants elicited a number of challenges to the century-old cohesion–tension theory. The ongoing debate over mechanisms of long-distance water transport has stimulated an intense interest in the phenomenon and mechanisms of embolism repair. Rather than embolism being essentially irreversible, it now appears that there is a dynamic balance between embolism formation and repair throughout the day and that daily release of water from the xylem via cavitation may serve to stabilize leaf water balance by minimizing the temporal imbalance between water supply and demand. Leaf physiology is closely linked to hydraulic architecture and hydraulic perturbations, but the precise nature of the signals to which stomata respond remains to be elucidated. When water transport in trees is studied at multiple scales from single leaves to the whole organism, considerable functional convergence in regulation of water use among phylogenetically diverse species is revealed.},
+  langid = {english},
+  keywords = {Capacitance,Cohesion theory,Hydraulic architecture,Plant–water relations,Soil water partitioning,Xylem cavitation},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\U6JW2KDV\\Meinzer et al. - 2001 - Water transport in trees current perspectives, ne.pdf;C\:\\Users\\Me\\Zotero\\storage\\BDEAH2ZQ\\S0098847201000740.html}
 }
 
 @article{meirLeafRespirationTwo2001,
