--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -142,8 +142,8 @@ While the focus here is on vertical gradients, it is important to note that in h
 Foliage distribution is determined by the distribution of tree sizes and tree architecture within a forest, and leaf area density (LAD; *i.e.*, leaf area per unit volume) patterns along the vertical gradient that are heterogeneous across forests (Figs. `r fig_NEON_vertical`a-b, `r SIfig_NEON_all`). 
 Dense canopy forests composed of broadleaf trees can have high LAD in the upper canopy layers, as well as in the understory (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a) -- a pattern also common in tropical forests [@ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993].
 In temperate forests, although LAD is generally more concentrated in the upper-canopy, undualting patterns are formed by conifers and top- vs. bottom-heavy foliage trees, and sometimes by dense understories [e.g., SCBI, Fig. `r fig_NEON_vertical`a, @parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985; @ishiiExploringRelationshipsCanopy2004a; @parkerCanopyLightTransmittance2002]. 
-In open-canopied forests ie. forests with lower density of trees and open canopies, including many needle-leaf forests, LAD can be predominantly accumulated in the lower canopy layers [e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a, @hanberryOpenForestEcosystems2020a; @lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. 
-Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns and further influence the formation of closed vs. open canopy forests [e.g., @almeidaContrastingFireDamage2016; @starkReframingTropicalSavannization2020; @bonan_ecological_2016; @hanberryOpenForestEcosystems2020a]. 
+In forests with more open upper canopies, including many needle-leaf forests, LAD can be predominantly accumulated in the lower canopy or understory layers [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`a, @hanberryOpenForestEcosystems2020a; @lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. 
+Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [e.g., @almeidaContrastingFireDamage2016; @starkReframingTropicalSavannization2020; @bonan_ecological_2016; @hanberryOpenForestEcosystems2020a]. 
 In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting LAD patterns [@parkerStructuralPhenologyLeaf2004; @parkerConsequencesEnvironmentalHeterogeneity2019]. 
 In this review, we focus on growing season conditions (peak leaf area index, LAI) unless otherwise noted.
 
@@ -152,7 +152,7 @@ This gradient is more pronounced in dense canopies, including broad-leaf and mix
 Variability in the light environment decreases with height, with the shaded understory being highly influenced by sunflecks, or brief increases in solar radiation caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. 
 
 **Wind speeds are also higher at the top of the canopy, owing to the buffering effect of the canopy [@juckerCanopyStructureTopography2018].**
-Wind speeds increase with height across forest types, including closed and open-canopy forests  [Figs. `r fig_NEON_vertical`e, `r SIfig_NEON_all`; @barnardSeasonalVariationCanopy2016a; @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020a; @hanberryReconceptualizationOpenOak2018] and savannas [@curtis_intracanopy_2019;@johnstonWhatLiesVertical2020]. Specifically, averaged across the NEON sites, maximum daily wind speeds were 4.1 m s^-1^ at the top of the vertical profile, compared to  $\le$ 1.1 m s^-1^ at the bottom (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).
+Wind speeds increase with height across forest types [Figs. `r fig_NEON_vertical`e, `r SIfig_NEON_all`; @barnardSeasonalVariationCanopy2016a; @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020a; @hanberryReconceptualizationOpenOak2018] and savannas [@curtis_intracanopy_2019;@johnstonWhatLiesVertical2020]. Specifically, averaged across the NEON sites, maximum daily wind speeds were 4.1 m s^-1^ at the top of the vertical profile, compared to  $\le$ 1.1 m s^-1^ at the bottom (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).
 The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for both water and heat loss (see section "Leaf temperature").
 
 **Atmospheric concentrations of carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.**
@@ -281,7 +281,7 @@ nocite: | @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConduc
 
 ### Stomatal conductance
 
-Maximum $g_s$ increases with light, and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table 2). However, because of the high VPD and irradiance experienced by sun leaves,  midday stomatal depression is more prevalent in sun leaves than shade leaves in closed-canopy forests.  In sun leaves, $T_{leaf}$ thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. In open forests, midday stomatal closure can occur in both upper canopy and lower canopy leaves, with stomata of lower canopy leaves remaining closed for a longer duration than upper canopy leaves, resulting in elevated $T_{leaf}$ [OSBS, Fig. `r fig_leaf_T`,@zweifelMiddayStomatalClosure2002]. The temperature at which $g_s$ is maximized, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019a], sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ than do shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021]. A study of tropical oaks found decreasing stomatal conductive capacity (based on morphology) with increasing site mean $T_{air}$ (Lin et al., 2021), a response likely linked to water conservation under increasing VPD. The extent to which maximum conductance (and its leaf cooling potential) increases with light may therefore depend on the specific thermal microenvironments arrayed across the profile
+Maximum $g_s$ increases with light, and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table 2). However, because of the high VPD and irradiance experienced by sun leaves,  midday stomatal depression is more prevalent in sun leaves than shade leaves in closed-canopy forests.  In sun leaves, $T_{leaf}$ thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. The temperature at which $g_s$ is maximized, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019a], sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ than do shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021]. 
 
 ### Photosynthesis
 
@@ -317,7 +317,7 @@ Leaf thermal tolerances are more closely adapted to microclimate than macroclima
 ### Tree metabolism and growth, and survival
 
 **Vertical gradients affect tree metabolism and growth.**
-Whole-tree transpiration and gross primary production (GPP) increase in tandem with increasing tree size, where size is most commonly measured as diameter at breast height (DBH), but functionally linked to metrics such as foliage biomass, crown volume, and height, all of which scale with DBH [**REFS**, @anderson-teixeiraSizerelatedScalingTree2015].
+Whole-tree transpiration and gross primary production (GPP) increase in tandem with increasing tree size, where size is most commonly measured as diameter at breast height (DBH), but functionally linked to metrics such as foliage biomass, crown volume, and height, all of which scale with DBH [@meinzerWaterTransportTrees2001;@kunertRevisedHydrologicalModel2017; @anderson-teixeiraSizerelatedScalingTree2015].
 Specifically, increases are linked to increased leaf area and in part to an increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where higher light availability and associated elevation of $g_s$ and $A_A$ result in higher leaf area-specific transpiration and photosynthesis (Table 2).
 The net foliar photosynthate production is allocated among functions including respiration, woody growth, foliar turnover, belowground allocation, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
 The proportion of GPP allocated to many of these increases with tree size, including ... foliar respiration (Table 2), reproduction [**REFS**; @westIncreasingRespiratoryCosts2020]. As a result of increasing carbon allocation to these other functions, mass-specific - and sometimes even absolute - woody growth rates decrease with tree size [**REFS**; @anderson-teixeiraCarbonCyclingMature2021].
