--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4864,6 +4864,19 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\RYTSJUI8\\Kunert et al. - 2017 - A revised hydrological model for the Central Amazo.pdf;C\:\\Users\\Me\\Zotero\\storage\\9KUSA3AM\\S0168192317300825.html}
 }
 
+@article{kuppersLeafGasExchange1993,
+  title = {Leaf Gas Exchange of Beech ({{Fagus}} Sylvatica {{L}}.) Seedlings in Lightflecks: Effects of Fleck Length and Leaf Temperature in Leaves Grown in Deep and Partial Shade},
+  shorttitle = {Leaf Gas Exchange of Beech ({{Fagus}} Sylvatica {{L}}.) Seedlings in Lightflecks},
+  author = {Küppers, Manfred and Schneider, Hans},
+  date = {1993-04-01},
+  journaltitle = {Trees},
+  volume = {7},
+  pages = {160--168},
+  doi = {10.1007/BF00199617},
+  abstract = {Responses of leaf gas exchange in shade and half-shade grown seedlings of the European beech, Fagus sylvatica L., to constant light conditions indicate different phases of photosynthetic induction: an immediate, a fast and a subsequent slow phase. The slow phase has both biochemical and stomatal components. The higher the induction, the higher the lightfleck utilization efficiency (LUE) attributable to a lightfleck. LUE can be higher than 100\% compared to a theoretical instantaneous response. Lightfleck quantum yield (total carbon gain attributable to a lightfleck per incident quantum density in the fleck) is highest in short pulses of light. Post-illumination carbon gain initially increases with fleck length, levelling off above 20 s. The lower the induction, the longer carbon is fixed post-illuminatively (up to 84 s) but the less carbon is gained. Shade leaves are induced much faster than partial shade leaves. They utilize series of lightflecks to become fully induced, while half-shade (and sun) leaves depend on continuous high light. Half-shade leaves lose induction faster in low light between lightflecks. High as well as low temperatures strongly delay induction in half-shade but not in shade leaves. In general, shade leaves are much better adapted to the dynamic light environment of the forest understorey; however, their water-use efficiency during induction is lower.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\SKSCCIQG\\Küppers and Schneider - 1993 - Leaf gas exchange of beech (Fagus sylvatica L.) se.pdf}
+}
+
 @article{kusiPlasticLeafMorphology2020,
   title = {Plastic Leaf Morphology in Three Species of {{Quercus}}: {{The}} More Exposed Leaves Are Smaller, More Lobated and Denser},
   shorttitle = {Plastic Leaf Morphology in Three Species of {{Quercus}}},
