--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -25,12 +25,18 @@ table_leaf_traits=1
 table_leaf_metabolism=2
 
 
-#Appendices
+# SI
+## appendices
+
 appendix_NEON_methods <- "S1"
 appendix_tealeaves_methods <- "S2"
+appendix_lit_review_methods <- "S3"
+
 
 appendix_NEON_methods_title<- "Methods for NEON vertical profiles"
 appendix_tealeaves_methods_title <- "Methods for leaf energy balance modeling"
+appendix_lit_review_methods_title<- "Methods for literature review"
+
 
 
 #SI table numbers
@@ -89,6 +95,10 @@ Parameters are presented in Table `r Tealeaves_parameters`.
 - @cavender-baresChangesDroughtResponse2000. 
 
 For drought scenario, biophysical variables were parameterized similar to normal scenario using Harvard NEON data. Overstory drought PAR values reflect maximum observed Harvard NEON PAR and understory drought reflect 50% increased PAR of understory normal value. Leaf trait measurements for leaf width is the same as normal scenario, stomatal conductance is kept constant at a minimum value of 0.01 umol/m^2/s/Pa for both positions. In each visual, all variables are constant (Biophysical Constants table) except for the independent variable that represents minimum - maximum range.
+
+\newpage
+# `r appendix_lit_review_methods_title`
+
 
 \newpage
 # `r Tealeaves_parameters_legend `
