--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -33,23 +33,25 @@ appendix_tealeaves_methods <- "S2"
 appendix_lit_review_methods <- "S3"
 
 
-appendix_NEON_methods_title<- "Methods for NEON vertical profiles"
-appendix_tealeaves_methods_title <- "Methods for leaf energy balance modeling"
-appendix_lit_review_methods_title<- "Methods for literature review"
+appendix_NEON_methods_title<- "Methods S1. Methods for NEON vertical profiles"
+appendix_tealeaves_methods_title <- "Methods S2. Methods for leaf energy balance modeling"
+appendix_lit_review_methods_title<- "Methods S3. Methods for literature review"
 
 
 
 #SI table numbers
-SItable_example = "S1"
+NEON_sites_legend = "S1"
+Tealeaves_parameters = "S2"
 
 #SI table captions
-SItable_example_legend <- "Table S1. ...."
+NEON_sites_legend = "Table S1. (Neon sites)"
+Tealeaves_parameters_legend <- "Table S2. (Tealeaves parameters)"
 
 #SI figure numbers
 SIfig_NEON_all = "S1"
 
 #SI figure captions
-SIfig_example_legend <- "Figure S1. Vertical gradients in micrometeorological conditions for all forested sites in the National Ecological Observatory Network (NEON)"
+SIfig_NEON_all_legend <- "Figure S1. Vertical gradients in micrometeorological conditions for all forested sites in the National Ecological Observatory Network (NEON)"
 
 ```
 
@@ -403,13 +405,17 @@ Detailed structural information from lidar data has been used to measure tree he
 
 ## SI files
 
-Appendix `r appendix_NEON_methods`. `r appendix_NEON_methods_title`
+`r appendix_NEON_methods_title`
 
-Appendix `r appendix_tealeaves_methods`. `r appendix_tealeaves_methods_title`
+`r appendix_tealeaves_methods_title`
 
-Appendix `r appendix_lit_review_methods`. `r appendix_lit_review_methods_title`
+`r appendix_lit_review_methods_title`
 
-SIfig_example_legend
+`r NEON_sites_legend`
+
+`r Tealeaves_parameters_legend` 
+
+`r SIfig_NEON_all_legend`
 
 \newpage
 ## References
