--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -1,5 +1,5 @@
 ---
-title: ''
+title: 'Supporting Information'
 output: word_document
 bibliography: Zotero_references.bib
 csl: new-phytologist.csl 
@@ -33,7 +33,7 @@ appendix_tealeaves_methods <- "S2"
 appendix_lit_review_methods <- "S3"
 
 
-appendix_NEON_methods_title<- "Methods S1. Methods for NEON vertical profiles"
+appendix_NEON_methods_title<- "Methods S1. Methods for analyzing vertical gradients in the biophysical environment"
 appendix_tealeaves_methods_title <- "Methods S2. Methods for leaf energy balance modeling"
 appendix_lit_review_methods_title<- "Methods S3. Methods for literature review"
 
@@ -44,7 +44,7 @@ NEON_sites_legend = "S1"
 Tealeaves_parameters = "S2"
 
 #SI table captions
-NEON_sites_legend = "Table S1. (Neon sites)"
+NEON_sites_legend = "Table S1. National Ecological Observatory Network (NEON) sites included in the analysis of vertical gradients of key biophysical characteristics"
 Tealeaves_parameters_legend <- "Table S2. (Tealeaves parameters)"
 
 #SI figure numbers
@@ -70,15 +70,17 @@ Kristina J. Anderson-Teixeira^1,2^*
 
 \newpage
 
-#  `r appendix_NEON_methods_title`
-
 S1 Note:
 
 It is noteworthy that leaf and branch temperatures often differ substantially. For instance, exposed tropical tree bark can be much warmer than leaves [@pauTropicalForestTemperature2018; @stillImagingCanopyTemperature2021; @johnstonWhatLiesVertical2020]. 
 Thus, vegetation temperature ($T_{veg}$) measured using sensors that integrate across both leaves and woody vegetation (e.g., infrared sensors for $T_{veg}$ at NEON sites, Fig. `r fig_NEON_vertical`h) does not always equal $T_{leaf}$, particularly in settings where leaf area is low relative to woody vegetation (*i.e.*, low-LAI ecosystems and understories). 
 Recent advances in $T_{leaf}$ modeling (see "Scaling across Space and Time") will enhance our understanding of large scale $T_{leaf}$ vertical patterns [@stillImagingCanopyTemperature2021; @macleanMicroclimcMechanisticModel2021]
 
-METHODS ON NEON ANALYSIS GO HERE.
+
+#  `r appendix_NEON_methods_title`
+
+
+METHODS ON NEON ANALYSIS GO HERE. Google doc: https://docs.google.com/document/d/1HdPa7X5AMrEwfLjazGMU92uTYMc6pObh/edit#heading=h.gjdgxs 
 
 see [Issue 2](https://github.com/EcoClimLab/vertical-thermal-review/issues/2) , [issue 20](https://github.com/EcoClimLab/vertical-thermal-review/issues/20) 
 
