--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1803,6 +1803,24 @@
   abstract = {Within-canopy gradients of leaf functional traits have been linked to both light availability and vertical gradients in leaf water potential. While observational studies can reveal patterns in leaf traits, within-canopy experimental manipulations can provide mechanistic insight to tease apart multiple interacting drivers. Our objectives were to disentangle effects of height and light environment on leaf functional traits by experimentally shading branches along vertical gradients within a sugar maple (Acer saccharum) forest. Shading reduced leaf mass per area (LMA), leaf density, area-based leaf nitrogen (Narea), and carbon:nitrogen (C:N) ratio, and increased mass-based leaf nitrogen (Nmass), highlighting the importance of light availability on leaf morphology and chemistry. Early in the growing season, midday leaf water potential (ψmid) LMA, and Narea were driven primarily by height; later in the growing season, light became the most important driver for LMA and Narea. Carbon isotope composition (δ¹³C) displayed strong, linear correlations with height throughout the growing season, but did not change with shading, implying that height is more influential than light on water use efficiency and stomatal behavior. LMA, leaf density, Nmass, C:N ratio, and δ¹³C all changed seasonally, suggesting that leaf ageing effects on leaf functional traits are equally as important as microclimatic conditions. Overall, our results indicate that: (1) stomatal sensitivity to vapor pressure deficit or ψmid constrains the supply of CO₂ to leaves at higher heights, independent of light environment, and (2) LMA and Narea distributions become functionally optimized through morphological acclimation to light with increasing leafage despite height-related constraints.}
 }
 
+@article{cobleLightDrivesVertical2014,
+  title = {Light Drives Vertical Gradients of Leaf Morphology in a Sugar Maple ({{Acer}} Saccharum) Forest},
+  author = {Coble, Adam P. and Cavaleri, Molly A.},
+  date = {2014-02-01},
+  journaltitle = {Tree Physiol},
+  volume = {34},
+  number = {2},
+  pages = {146--158},
+  publisher = {{Oxford Academic}},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/tpt126},
+  url = {https://academic.oup.com/treephys/article/34/2/146/1637874},
+  urldate = {2020-08-22},
+  abstract = {Abstract. Leaf mass per area (LMA, g\hspace{0.25em}m−2) is an essential trait for modeling canopy function due to its strong association with photosynthesis, respiration and},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\RDYIW7XZ\\Coble and Cavaleri - 2014 - Light drives vertical gradients of leaf morphology.pdf;C\:\\Users\\Me\\Zotero\\storage\\XX5K8Y2V\\1637874.html}
+}
+
 @article{cobleLightDrivesVertical2014a,
   title = {Light Drives Vertical Gradients of Leaf Morphology in a Sugar Maple ({{Acer}} Saccharum) Forest},
   author = {Coble, Adam P. and Cavaleri, Molly A.},
