--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -157,7 +157,7 @@ ft
 \newpage
 
 # `r SIfig_NEON_all_legend`
-![**Figure `r SIfig_NEON_all`. Vertical gradients in micrometeorological conditions for all forested sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in July mean ± 1 standard deviation for maximum photosyntehtically active ratiation (PAR), maximum wind speed, minimum humidity, maximum $T_{air}$, and maximum biological temperature, $T_{bio}$. Sites are grouped into the following categories: (A) (sub)subtropical and warm temperate broadleaf: ..., (B) temperate open/ savanna forests: ..., (C) temperate mesic broadleaf forests: ..., (D) temperate conifer forests: ..., (E) northern and boreal forests: ...  [Issue #35](https://github.com/EcoClimLab/vertical-thermal-review/issues/35). ](NEON_height_profiles/figures/profile_all_groups.png)
+![**Figure `r SIfig_NEON_all`. Vertical gradients in micrometeorological conditions for all forested sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in July mean ± 1 standard deviation for maximum photosyntehtically active ratiation (PAR), maximum wind speed, minimum humidity, maximum $T_{air}$, and maximum biological temperature, $T_{bio}$. Sites are grouped into the following categories: (A) (sub)subtropical and warm temperate broadleaf: ..., (B) temperate open/ savanna forests: ..., (C) temperate mesic broadleaf forests: ..., (D) temperate conifer forests: ..., (E) northern and boreal forests: ...  Further site information is given in Supporting Information Table `r NEON_sites_legend`, and analysis details in Supporting Information Methods `r appendix_NEON_methods`. [Issue #35](https://github.com/EcoClimLab/vertical-thermal-review/issues/35). ](NEON_height_profiles/figures/profile_all_groups.png)
 
 \newpage
 
